[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/img/Pause Menu/Window.png" type="Texture" id=1]
[ext_resource path="res://assets/img/Pause Menu/Play_BTN.png" type="Texture" id=2]
[ext_resource path="res://assets/img/Pause Menu/Play_BTN_Active.png" type="Texture" id=3]
[ext_resource path="res://assets/img/Pause Menu/Menu_BTN_Active.png" type="Texture" id=4]
[ext_resource path="res://assets/img/Pause Menu/Info_BTN_Active.png" type="Texture" id=5]
[ext_resource path="res://assets/img/Pause Menu/Menu_BTN.png" type="Texture" id=6]
[ext_resource path="res://assets/img/Pause Menu/Info_BTN.png" type="Texture" id=7]
[ext_resource path="res://assets/fonts/ethnocentric/ethnocentric rg.otf" type="DynamicFontData" id=8]
[ext_resource path="res://assets/img/Level Menu/Star_03.png" type="Texture" id=9]
[ext_resource path="res://assets/img/Level Menu/Star_01.png" type="Texture" id=10]
[ext_resource path="res://scripts/PauseMenu.gd" type="Script" id=11]

[sub_resource type="DynamicFont" id=1]
size = 64
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "achived",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "empty",
"speed": 5.0
} ]

[node name="PauseMenu" type="Node2D"]
z_index = 10
script = ExtResource( 11 )

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 0, 0, 0, 0.588235 )
show_behind_parent = true
light_mask = 0
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 560.0
margin_top = 88.0
margin_right = 1500.0
margin_bottom = 1168.0
rect_scale = Vector2( 0.85, 0.85 )
texture = ExtResource( 1 )

[node name="PlayButton" type="TextureButton" parent="."]
margin_left = 872.0
margin_top = 704.0
margin_right = 1082.0
margin_bottom = 914.0
rect_scale = Vector2( 0.85, 0.85 )
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 3 )

[node name="InfoButton" type="TextureButton" parent="."]
margin_left = 640.0
margin_top = 736.0
margin_right = 850.0
margin_bottom = 946.0
rect_scale = Vector2( 0.75, 0.75 )
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 5 )

[node name="MenuButton" type="TextureButton" parent="."]
margin_left = 1112.0
margin_top = 736.0
margin_right = 1322.0
margin_bottom = 946.0
rect_scale = Vector2( 0.75, 0.75 )
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 4 )

[node name="Pause" type="Label" parent="."]
margin_left = 800.0
margin_top = 112.0
margin_right = 1115.0
margin_bottom = 190.0
custom_colors/font_color = Color( 0.929412, 0.960784, 0.972549, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.392157 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 1 )
text = "Pause"

[node name="PStar1" type="AnimatedSprite" parent="."]
position = Vector2( 728, 496 )
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 2 )
animation = "empty"

[node name="PStar2" type="AnimatedSprite" parent="."]
position = Vector2( 960, 376 )
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 2 )
animation = "empty"

[node name="PStar3" type="AnimatedSprite" parent="."]
position = Vector2( 1192, 496 )
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 2 )
animation = "empty"

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="InfoButton" to="." method="_on_InfoButton_pressed"]
[connection signal="pressed" from="MenuButton" to="." method="_on_MenuButton_pressed"]
